Add packaged JAR